objects/ResourceUOMAssociation__c/ResourceUOMAssociation__c.object-meta.xml
<CustomObject>
    <label>Resource Unit of Measure</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Unit of Measures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>