objects/ResourceUOMAssociation__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block</label>
    <type>Checkbox</type>
</CustomField>