objects/ResourceUOMAssociation__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Facility__c.Blocked__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Facility__c</referenceTo>
    <relationshipName>ResourceUOMAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>