objects/ResourceUOMAssociation__c/fields/ResourceUOMAssociationCSID__c.field-meta.xml
<CustomField>
    <fullName>ResourceUOMAssociationCSID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ResourceUOMAssociationCSID</label>
    <type>Text</type>
</CustomField>