objects/ResourceUOMAssociation__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Unit_of_Measure__c.Blocked__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Resource Unit of Measures (Unit of Measure)</relationshipLabel>
    <relationshipName>ResourceUOMAssociations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>